Sa Mär 28 14:17:49 CET 2009 Guido Günther <agx@sigxcpu.org>

	add dbus service file
	* src/org.gnome.KrbAuthDialog.service.in: new file
	* src/Makefile.am (service_DATA): process annd install service file

Di Mär 24 00:04:50 CET 2009 Guido Günther <agx@sigxcpu.org>

	monitor ccache via GFileMontor
	* src/krb5-auth-dialog.c (monitor_ccache, ka_ccache_filename,
	  ccache_changed_cb): new functions
	  (main): monitor ccache via monitor_ccache
	* configure.ac: look for gio-unix

Di Mär 24 00:01:28 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-dialog.c (auth_dialog_prompter): handle
	GTK_RESPONSE_DELETE_EVENT like GTK_RESPONSE_CANCEL so pressing ESC or
	closing the dialog has the same effect than pressing cancel.
	* (ka_grab_credentials): look at "cancled" instead of looking at the
	kerberos error codes - more robust since heimdal and mit have different
	responses, let alone pkinit.

Mo Mär 23 23:57:36 CET 2009 Guido Günther <agx@sigxcpu.org>

	split password auth into a separate function
	* src/krb5-auth-dialog.c (ka_auth_password): new function
	  (grab_credentials): fall back to password auth if no token is
	  present and pkinit is enabled

Mo Mär 23 23:55:20 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-pwdialog.h: remove unused headers
	* src/krb5-auth-applet.h: likewise
	* src/krb5-auth-dialog.c (is_online): move static variable to the top

Mi Mär 11 17:21:07 CET 2009 Guido Günther <agx@sigxcpu.org>

	silence compiler warnings
	* src/krb5-auth-{applet,dialog,gconf,pwdialog}.[ch]: mark unused
	  parameters as G_GNUC_UNUSED or drop them, add missing void to
	  prototypes

Mi Mär 11 17:19:02 CET 2009 Guido Günther <agx@sigxcpu.org>

	add more compiler warnings
	* acinclude.m4: add KA_COMPILE_WARNINGS
	* compiler-flags.m4: add gl_COMPILER_FLAGS to test compiler options
	* configure.ac: call KA_COMPILE_WARNINGS and add WARN_CFLAGS to CFLAGS

Mi Mär 11 17:10:11 CET 2009 Guido Günther <agx@sigxcpu.org>
