@@ -22,93 +22,8 @@
 #include <gconf/gconf-client.h>
 
 #include "krb5-auth-applet.h"
+#include "krb5-auth-gconf-tools.h"
 #include "krb5-auth-gconf.h"
-
-#define KA_GCONF_PATH			"/apps/" PACKAGE
-#define KA_GCONF_KEY_PRINCIPAL		KA_GCONF_PATH "/principal"
-#define KA_GCONF_KEY_PK_USERID		KA_GCONF_PATH "/pk_userid"
-#define KA_GCONF_KEY_PROMPT_MINS	KA_GCONF_PATH "/prompt_minutes"
-#define KA_GCONF_KEY_SHOW_TRAYICON	KA_GCONF_PATH "/show_trayicon"
-
-static gboolean
-ka_gconf_get_string (GConfClient* client,
-		     const char* key,
-		     char** value)
-{
-	GError*		error = NULL;
-	gboolean	success = FALSE;
-	GConfValue*	gc_value;
-
-	g_return_val_if_fail (key != NULL, FALSE);
-	g_return_val_if_fail (*value == NULL, FALSE);
-
-	if ((gc_value = gconf_client_get (client, key, &error))) {
-		if (gc_value->type == GCONF_VALUE_STRING) {
-			*value = g_strdup (gconf_value_get_string (gc_value));
-			success = TRUE;
-		} else if (error) {
-				g_print (error->message);
-				g_error_free (error);
-		}
-		gconf_value_free (gc_value);
-	}
-	return success;
-}
-
-
-static gboolean
-ka_gconf_get_int (GConfClient* client,
-		    const char* key,
-		    int* value)
-{
-	GError*		error = NULL;
-	gboolean	success = FALSE;
-	GConfValue*	gc_value;
-
-	g_return_val_if_fail (key != NULL, FALSE);
-	g_return_val_if_fail (value != NULL, FALSE);
-
-	if ((gc_value = gconf_client_get (client, key, &error)))
-	{
-		if (gc_value->type == GCONF_VALUE_INT) {
-			*value = gconf_value_get_int (gc_value);
-			success = TRUE;
-		} else if (error) {
-				g_print (error->message);
-				g_error_free (error);
-		}
-		gconf_value_free (gc_value);
-	}
-	return success;
-}
-
-
-static gboolean
-ka_gconf_get_bool (GConfClient* client,
-		    const char* key,
-		    gboolean* value)
-{
-	GError*		error = NULL;
-	gboolean	success = FALSE;
-	GConfValue*	gc_value;
-
-	g_return_val_if_fail (key != NULL, FALSE);
-	g_return_val_if_fail (value != NULL, FALSE);
-
-	if ((gc_value = gconf_client_get (client, key, &error)))
-	{
-		if (gc_value->type == GCONF_VALUE_BOOL) {
-			*value = gconf_value_get_bool (gc_value);
-			success = TRUE;
-		} else if (error) {
-				g_print (error->message);
-				g_error_free (error);
-		}
-		gconf_value_free (gc_value);
-	}
-	return success;
-}
-
 
 static gboolean
 ka_gconf_set_principal (GConfClient* client, KaApplet* applet)
